data/derived/fa15/progs/unify/prog3725.ml.out
Characters 73-88:
  ((fst a)+1, bigAdd ((mulByDigit x l1) @ [clone 0 (fst a)]) (snd a)) in
                                           ^^^^^^^^^^^^^^^
Error: This expression has type int list list
       but an expression was expected of type int
